--- a/README.org
+++ b/README.org
@@ -63,6 +63,7 @@
     - disable bell, it's annoying.
     - type gpg password inside emacs, rather than in a pop-up window, it's difficult when Emacs is full-screen.
     - set fill-column to 120, which suits my screen size better.
+    - diable cursor blinking, it's too distracting.
 
 *** Auto Save
 
