Remove awesome-tab: turned out not to use it much, also it slows down my emacs significantly.

--- a/README.org
+++ b/README.org
@@ -119,7 +119,7 @@
 
      Label each window with a number and press M-<num> to jump to it, best way of windows switching in my opinion.
 
-**** awesome-tab
+**** +awesome-tab+: don't use it often after trying for a while.
 
      An improved version of tabbar, I use it in combination with helm buffer switching. It reduces the burden of remembering opened buffer names.
 
@@ -230,7 +230,3 @@
   - expand-region
 
   - +yafolding, need to compare the existing code folding extensions first+ -> built-in hs-minor-mode seems to be sufficient
-
-  - java support
-
-  - C/C++ support
