--- a/README.org
+++ b/README.org
@@ -210,6 +210,8 @@
 
     这也是自由软件的妙处之一：源码可以活得更久远。
 
+    后来又在一些机器上改用 rime 作为输入法后端，配置见 http://wenshanren.org/?p=1070
+
 *** sdcv
 
     王勇写的星际译王插件，可以在 Emacs 中调用字典查词。
